Added new project, some fixes, and hopefully Embed

--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
-
   <html lang="en">
 <head>
-  <title>N0rule weebpage🫠</title>
+  <title>N0rule Weebpage🫠</title>
+  <!-- Favicon -->
   <link rel="shortcut icon" href="/images/favicons/favicon.ico">
+
+  <!-- icons -->
   <link rel="icon" sizes="16x16 32x32 64x64" href="/images/favicons/favicon.ico">
   <link rel="icon" type="image/png" sizes="196x196" href="/images/favicons/favicon-192.png">
   <link rel="icon" type="image/png" sizes="160x160" href="/images/favicons/favicon-160.png">
@@ -23,12 +25,30 @@
   <meta name="msapplication-TileColor" content="#FFFFFF">
   <meta name="msapplication-TileImage" content="/images/favicons/favicon-144.png">
   <meta name="msapplication-config" content="/images/favicons/browserconfig.xml">
+  <!-- Add more sizes as needed -->
+
+  <!-- Open Graph meta tags -->
+  <meta property="og:title" content="N0rule Weebpage🫠">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://n0rule.is-a.dev/">
+  <meta property="og:image" content="/images/profile-picture.png">
+  <meta property="og:description" content="Everything you need to know about N0rule">
+
+  <!-- Twitter Card meta tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:url" content="https://n0rule.is-a.dev/">
+  <meta name="twitter:title" content="N0rule Weebpage🫠">
+  <meta name="twitter:description" content="Everything you need to know about N0rule">
+  <meta name="twitter:image" content="/images/profile-picture.png">
+
+  <!-- Other meta tags -->
   <meta charset="UTF-8">
   <meta name="description" content="N0rule's Personal Website">
   <meta name="author" content="N0rule">
   <link rel="stylesheet" type="text/css" href="/style.css">
   <script src="/script.js"></script>
 </head>
+
 
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-9B4NME457B"></script>
@@ -90,7 +110,7 @@
                 </a>
               </div>
               <div class="download-button">
-                <a href="https://discord.com/invite/KDCa8dczVW">
+                <a href="https://dsc.gg/servkorobka">
                   <img src="https://cdn-icons-png.flaticon.com/512/5968/5968756.png" alt="Discord logo">
                   Test Server
                 </a>
@@ -112,6 +132,17 @@
                   <img src="https://cdn-icons-png.flaticon.com/512/2111/2111432.png" alt="Github logo">
                   Github
                 </a>
+              </div>
+            </div>
+          </div>
+          <div class="projcard">
+            <h2>N0rule Deck</h2>
+            <div class="emi_bot_container">
+              <img id="projects_img" src="/images/n0rule_deck.png" alt="N0rule Deck Image">
+              <p>The N0rule Deck is not only compact and affordable but also offers unparalleled versatility and convenience. By
+                empowering users to assign macros to specific touch gestures, such as opening applications, adjusting volume, or
+                executing commands, this innovative device streamlines workflows and enhances productivity, making it an essential
+                tool for gamers, programmers, and anyone seeking to optimize their computing experience..</p>
               </div>
             </div>
           </div>
@@ -172,7 +203,7 @@
             <img src="/images/cloud1.png" alt="Cloud img 1">
             <img src="/images/cloud2.png" alt="Cloud img 2">
           </div>
-        </div>
+
       </section>
       <section id="skills">
         <h2>Skills</h2>
@@ -214,7 +245,7 @@
                 </div>
             </div>
         </div>
-    </section>    
+      </section>
       <section id="social-media">
         <h2>Social Media</h2>
         <div class="social-media-cards">
