new proj, some fixes

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-  <html lang="en">
+<html lang="en">
 <head>
   <title>N0rule Weebpage🫠</title>
   <!-- Favicon -->
@@ -40,11 +40,11 @@
   <meta name="twitter:title" content="N0rule Weebpage🫠">
   <meta name="twitter:description" content="Everything you need to know about N0rule">
   <meta name="twitter:image" content="/images/profile-picture.png">
-
   <!-- Other meta tags -->
   <meta charset="UTF-8">
-  <meta name="description" content="N0rule's Personal Website">
+  <meta name="description" content="N0rule's Personal Website showcasing projects and skills.">
   <meta name="author" content="N0rule">
+  <meta name="keywords" content="N0rule, portfolio, projects, skills, web development">
   <link rel="stylesheet" type="text/css" href="/style.css">
   <script src="/script.js"></script>
 </head>
@@ -96,7 +96,7 @@
         <div class="project-cards">
           <div class="projcard">
             <h2>Discord Bot</h2>
-            <div class="emi_bot_container">
+            <div class="projcard_сontainer">
               <img id="emi_bot" src="/images/emi_bot.png" alt="Bot Img">
               <p>Meet Emi, the ultimate discord companion! Emi is a feature-rich bot that offers a wide range of
                 functionalities, including administrative commands, music player, economy system, and fun commands. Emi
@@ -119,7 +119,7 @@
           </div>
           <div class="projcard">
             <h2>TizenOS OSC heart rate monitor for VRChat</h2>
-            <div class="emi_bot_container">
+            <div class="projcard_сontainer">
               <img id="emi_bot" src="/images/tizen_os_OSC.png" alt="Tizen OS OSC Image">
               <p>This tool leverages the capabilities of your TizenOS Watch to seamlessly
                 transmit Open Sound Control (OSC) messages of your heart rate directly into the virtual realm of VRChat.
@@ -136,114 +136,131 @@
             </div>
           </div>
           <div class="projcard">
-            <h2>N0rule Deck</h2>
-            <div class="emi_bot_container">
-              <img id="projects_img" src="/images/n0rule_deck.png" alt="N0rule Deck Image">
-              <p>The N0rule Deck is not only compact and affordable but also offers unparalleled versatility and convenience. By
-                empowering users to assign macros to specific touch gestures, such as opening applications, adjusting volume, or
-                executing commands, this innovative device streamlines workflows and enhances productivity, making it an essential
-                tool for gamers, programmers, and anyone seeking to optimize their computing experience..</p>
+            <h2>Logitech G15 Applet</h2>
+            <div class="projcard_сontainer">
+              <img id="projects_img" src="/images/NanachiApplet.png" alt="Logi g15 NanachiApplet">
+              <p>A simple applet for my Logitech g15 keyboard display, it displays the current date and time, and a
+                little character who can look around and blink.</p>
+              <div class="download-button">
+                <a href="https://github.com/N0rule/NanachiApplet">
+                  <img src="https://cdn-icons-png.flaticon.com/512/2111/2111432.png" alt="Github logo">
+                  Github
+                </a>
               </div>
             </div>
           </div>
           <div class="projcard">
-            <h2>3D Models</h2>
-            <p>I've always been fascinated by the potential of virtual reality and the immersive experiences it offers.
-              That's why I jumped into the world of VRChat, a popular social VR platform where users can create and
-              share their own content.
-              <br><br>One of my first projects in VRChat was creating a series of custom avatars for users to use. I
-              aimed to create a diverse range of styles and themes, from fantasy characters to anime-inspired designs. I
-              put a lot of effort into the details of each model, making sure they were both unique and of high quality.
-              <br><br>Apart from VRChat avatars, I also enjoy creating 3D models for game development. I have worked on
-              several game projects in the past, creating characters, props, and environments for various game genres.
-              It's incredibly rewarding to see my models come to life in a game and be enjoyed by players.
-              <br><br>All my 3D models are created using Blender. I continuously improve my skills by learning new
-              techniques and experimenting with materials and lighting.
-            </p>
-            <img src="/images/render1.png" alt="3D Model 1">
-            <img src="/images/render2.png" alt="3D Model 2">
-            <img src="/images/render3.png" alt="3D Model 3">
-            <div style="margin-top: 20px;">
-              <video src="/video/Baphy_animation.mp4" autoplay loop muted playsinline alt="3D Model Animation">
-            </div>
-            <!-- <canvas id="model-viewer"></canvas> В Процессе.. -->
-          </div>
-          <div class="projcard">
-            <h2>Games</h2>
-            <p>Presenting "Zombie Shooter", a survival game developed using Unity. Players are challenged to fend off
-              waves of zombies with a selection of weapons, including a pistol, shotgun, rifle, and sniper rifle. Each
-              weapon possesses its own unique feature, adding a new dimension of strategy and thrill to the gameplay
-              experience.
-              <br><br>
-              For instance, the pistol is ideal for dispatching zombies at close range, while the shotgun excels at
-              taking out large groups of enemies. The rifle, equipped with a laser for improved accuracy, can be
-              utilized both in close and long-range battles. The sniper rifle, on the other hand, provides players with
-              a safe means of eliminating zombies from a distance.
-              <br><br>
-              In addition to weapons, players have access to a range of items, such as health packs and ammunition, to
-              enhance their chances of survival.
-            </p>
-            <div>
-              <video src="/video/game-video.mp4" autoplay loop muted playsinline alt="Game Video">
+            <h2>N0rule Deck</h2>
+            <div class="projcard_сontainer">
+              <img id="projects_img" src="/images/n0rule_deck.png" alt="N0rule Deck Image">
+              <p>The N0rule Deck is not only compact and affordable but also offers unparalleled versatility and
+                convenience. By
+                empowering users to assign macros to specific touch gestures, such as opening applications, adjusting
+                volume, or
+                executing commands, this innovative device streamlines workflows and enhances productivity, making it an
+                essential
+                tool for gamers, programmers, and anyone seeking to optimize their computing experience.</p>
             </div>
           </div>
-          <div class="projcard" id="hosting">
-            <h2>Cloud Hosting Solutions</h2>
-            <p>I've had the privilege of utilizing Oracle Cloud for hosting various projects. One of my most notable
-              achievements has been the establishment and management of a Discord bot and a Minecraft server.<br><br>
-              To set up the Discord bot, I created a virtual machine on Oracle Cloud and installed the necessary
-              software and dependencies. I then configured the bot's settings to cater to the specific needs of my
-              community, and set up a MongoDB database to store user information and other data for the bot.<br><br>
-              I also established a Minecraft Purpur server using Oracle Cloud. This involved creating a virtual machine,
-              installing the necessary software and dependencies, and configuring the server settings to match the needs
-              of my community. Additionally, I installed various plugins to improve the gameplay experience for my
-              players. Hosting the Minecraft server on Oracle Cloud provided a valuable learning experience, as it
-              showcased the platform's flexibility and scalability.
-            </p>
-            <img src="/images/cloud1.png" alt="Cloud img 1">
-            <img src="/images/cloud2.png" alt="Cloud img 2">
+        </div>
+        <div class="projcard">
+          <h2>3D Models</h2>
+          <p>I've always been fascinated by the potential of virtual reality and the immersive experiences it offers.
+            That's why I jumped into the world of VRChat, a popular social VR platform where users can create and
+            share their own content.
+            <br><br>One of my first projects in VRChat was creating a series of custom avatars for users to use. I
+            aimed to create a diverse range of styles and themes, from fantasy characters to anime-inspired designs. I
+            put a lot of effort into the details of each model, making sure they were both unique and of high quality.
+            <br><br>Apart from VRChat avatars, I also enjoy creating 3D models for game development. I have worked on
+            several game projects in the past, creating characters, props, and environments for various game genres.
+            It's incredibly rewarding to see my models come to life in a game and be enjoyed by players.
+            <br><br>All my 3D models are created using Blender. I continuously improve my skills by learning new
+            techniques and experimenting with materials and lighting.
+          </p>
+          <img src="/images/render1.png" alt="3D Model 1">
+          <img src="/images/render2.png" alt="3D Model 2">
+          <img src="/images/render3.png" alt="3D Model 3">
+          <div style="margin-top: 20px;">
+            <video src="/video/Baphy_animation.mp4" autoplay loop muted playsinline alt="3D Model Animation">
           </div>
+          <!-- <canvas id="model-viewer"></canvas> В Процессе.. -->
+        </div>
+        <div class="projcard">
+          <h2>Games</h2>
+          <p>Presenting "Zombie Shooter", a survival game developed using Unity. Players are challenged to fend off
+            waves of zombies with a selection of weapons, including a pistol, shotgun, rifle, and sniper rifle. Each
+            weapon possesses its own unique feature, adding a new dimension of strategy and thrill to the gameplay
+            experience.
+            <br><br>
+            For instance, the pistol is ideal for dispatching zombies at close range, while the shotgun excels at
+            taking out large groups of enemies. The rifle, equipped with a laser for improved accuracy, can be
+            utilized both in close and long-range battles. The sniper rifle, on the other hand, provides players with
+            a safe means of eliminating zombies from a distance.
+            <br><br>
+            In addition to weapons, players have access to a range of items, such as health packs and ammunition, to
+            enhance their chances of survival.
+          </p>
+          <div>
+            <video src="/video/game-video.mp4" autoplay loop muted playsinline alt="Game Video">
+          </div>
+        </div>
+        <div class="projcard" id="hosting">
+          <h2>Cloud Hosting Solutions</h2>
+          <p>I've had the privilege of utilizing Oracle Cloud for hosting various projects. One of my most notable
+            achievements has been the establishment and management of a Discord bot and a Minecraft server.<br><br>
+            To set up the Discord bot, I created a virtual machine on Oracle Cloud and installed the necessary
+            software and dependencies. I then configured the bot's settings to cater to the specific needs of my
+            community, and set up a MongoDB database to store user information and other data for the bot.<br><br>
+            I also established a Minecraft Purpur server using Oracle Cloud. This involved creating a virtual machine,
+            installing the necessary software and dependencies, and configuring the server settings to match the needs
+            of my community. Additionally, I installed various plugins to improve the gameplay experience for my
+            players. Hosting the Minecraft server on Oracle Cloud provided a valuable learning experience, as it
+            showcased the platform's flexibility and scalability.
+          </p>
+          <img src="/images/cloud1.png" alt="Cloud img 1">
+          <img src="/images/cloud2.png" alt="Cloud img 2">
+        </div>
 
       </section>
       <section id="skills">
         <h2>Skills</h2>
         <div class="skills-container">
-            <div class="skill">
-                <h3>Unity</h3>
-                <div class="progress-bar-back">
-                    <div class="progress-bar-front" style="width: 54%;"></div>
-                </div>
+          <div class="skill">
+            <h3>Unity</h3>
+            <div class="progress-bar-back">
+              <div class="progress-bar-front" style="width: 54%;"></div>
             </div>
-            <div class="skill">
-                <h3>Blender</h3>
-                <div class="progress-bar-back">
-                    <div class="progress-bar-front" style="width: 70%;"></div>
-                </div>
+          </div>
+          <div class="skill">
+            <h3>Blender</h3>
+            <div class="progress-bar-back">
+              <div class="progress-bar-front" style="width: 70%;"></div>
             </div>
-            <div class="skill">
-                <h3>Html/CSS</h3>
-                <div class="progress-bar-back">
-                    <div class="progress-bar-front" style="width: 60%;"></div>
-                </div>
+          </div>
+          <div class="skill">
+            <h3>Html/CSS</h3>
+            <div class="progress-bar-back">
+              <div class="progress-bar-front" style="width: 60%;"></div>
             </div>
-            <div class="skill">
-                <h3>C++</h3>
-                <div class="progress-bar-back">
-                    <div class="progress-bar-front" style="width: 30%;"></div>
-                </div>
+          </div>
+          <div class="skill">
+            <h3>C++</h3>
+            <div class="progress-bar-back">
+              <div class="progress-bar-front" style="width: 30%;"></div>
             </div>
-            <div class="skill">
-                <h3>Node.js</h3>
-                <div class="progress-bar-back">
-                    <div class="progress-bar-front" style="width: 65%;"></div>
-                </div>
+          </div>
+          <div class="skill">
+            <h3>Node.js</h3>
+            <div class="progress-bar-back">
+              <div class="progress-bar-front" style="width: 65%;"></div>
             </div>
-            <div class="skill">
-                <h3>Oracle Cloud</h3>
-                <div class="progress-bar-back">
-                    <div class="progress-bar-front" style="width: 50%;"></div>
-                </div>
+          </div>
+          <div class="skill">
+            <h3>Oracle Cloud</h3>
+            <div class="progress-bar-back">
+              <div class="progress-bar-front" style="width: 50%;"></div>
             </div>
+          </div>
         </div>
       </section>
       <section id="social-media">
