--- a/index.html
+++ b/index.html
@@ -63,11 +63,11 @@
 <body class="dark">
   <main>
     <div class="container">
-      <button id="theme-button">
-        <img src="https://cdn-icons-png.flaticon.com/512/1312/1312348.png" alt="theme-button" />
+      <button id="theme-button" aria-label="Toggle Theme">
+        <img src="https://cdn-icons-png.flaticon.com/512/1312/1312348.png" alt="Theme Toggle Button" loading="lazy" />
       </button>
       <div class="profile-picture-container">
-        <img src="/images/profile-picture.png" alt="N0rule's profile picture" id="profile-picture">
+        <img src="/images/profile-picture.png" alt="N0rule's profile picture" id="profile-picture" loading="lazy">
         <div class="pphidden-text">N0rule</div>
       </div>
       <nav>
@@ -97,7 +97,7 @@
           <div class="projcard">
             <h2>Discord Bot</h2>
             <div class="projcard_сontainer">
-              <img id="emi_bot" src="/images/emi_bot.png" alt="Bot Img">
+              <img id="emi_bot" src="/images/emi_bot.png" alt="Bot Img" loading="lazy">
               <p>Meet Emi, the ultimate discord companion! Emi is a feature-rich bot that offers a wide range of
                 functionalities, including administrative commands, music player, economy system, and fun commands. Emi
                 can effortlessly manage your server with commands like kick, ban, and mute. You can also play your
@@ -105,13 +105,13 @@
                 economy system that lets you earn coins, and offers commands like Reaction, Covid, and Pokemon.</p>
               <div class="download-button">
                 <a href="https://github.com/N0rule/emi-discord-bot">
-                  <img src="https://cdn-icons-png.flaticon.com/512/2111/2111432.png" alt="Github logo">
+                  <img src="https://cdn-icons-png.flaticon.com/512/2111/2111432.png" alt="Github logo" loading="lazy">
                   Github
                 </a>
               </div>
               <div class="download-button">
                 <a href="https://dsc.gg/servkorobka">
-                  <img src="https://cdn-icons-png.flaticon.com/512/5968/5968756.png" alt="Discord logo">
+                  <img src="https://cdn-icons-png.flaticon.com/512/5968/5968756.png" alt="Discord logo" loading="lazy">
                   Test Server
                 </a>
               </div>
@@ -129,7 +129,7 @@
                 interactions, and explore new possibilities for emotional engagement within the virtual environment.</p>
               <div class="download-button">
                 <a href="https://github.com/N0rule/vrc-osc-tizenos-hrm">
-                  <img src="https://cdn-icons-png.flaticon.com/512/2111/2111432.png" alt="Github logo">
+                  <img src="https://cdn-icons-png.flaticon.com/512/2111/2111432.png" alt="Github logo" loading="lazy">
                   Github
                 </a>
               </div>
@@ -138,12 +138,12 @@
           <div class="projcard">
             <h2>Logitech G15 Applet</h2>
             <div class="projcard_сontainer">
-              <img id="projects_img" src="/images/NanachiApplet.png" alt="Logi g15 NanachiApplet">
+              <img id="projects_img" src="/images/NanachiApplet.png" alt="Logi g15 NanachiApplet" loading="lazy">
               <p>A simple applet for my Logitech g15 keyboard display, it displays the current date and time, and a
                 little character who can look around and blink.</p>
               <div class="download-button">
                 <a href="https://github.com/N0rule/NanachiApplet">
-                  <img src="https://cdn-icons-png.flaticon.com/512/2111/2111432.png" alt="Github logo">
+                  <img src="https://cdn-icons-png.flaticon.com/512/2111/2111432.png" alt="Github logo" loading="lazy">
                   Github
                 </a>
               </div>
@@ -152,7 +152,7 @@
           <div class="projcard">
             <h2>N0rule Deck</h2>
             <div class="projcard_сontainer">
-              <img id="projects_img" src="/images/n0rule_deck.png" alt="N0rule Deck Image">
+              <img id="projects_img" src="/images/n0rule_deck.png" alt="N0rule Deck Image" loading="lazy">
               <p>The N0rule Deck is not only compact and affordable but also offers unparalleled versatility and
                 convenience. By
                 empowering users to assign macros to specific touch gestures, such as opening applications, adjusting
@@ -177,11 +177,11 @@
             <br><br>All my 3D models are created using Blender. I continuously improve my skills by learning new
             techniques and experimenting with materials and lighting.
           </p>
-          <img src="/images/render1.png" alt="3D Model 1">
-          <img src="/images/render2.png" alt="3D Model 2">
-          <img src="/images/render3.png" alt="3D Model 3">
+          <img src="/images/render1.png" alt="3D Model 1" loading="lazy">
+          <img src="/images/render2.png" alt="3D Model 2" loading="lazy">
+          <img src="/images/render3.png" alt="3D Model 3" loading="lazy">
           <div style="margin-top: 20px;">
-            <video src="/video/Baphy_animation.mp4" autoplay loop muted playsinline alt="3D Model Animation">
+            <video src="/video/Baphy_animation.mp4" autoplay loop muted playsinline alt="3D Model Animation" loading="lazy">
           </div>
           <!-- <canvas id="model-viewer"></canvas> В Процессе.. -->
         </div>
@@ -201,7 +201,7 @@
             enhance their chances of survival.
           </p>
           <div>
-            <video src="/video/game-video.mp4" autoplay loop muted playsinline alt="Game Video">
+            <video src="/video/game-video.mp4" autoplay loop muted playsinline alt="Game Video" loading="lazy">
           </div>
         </div>
         <div class="projcard" id="hosting">
@@ -217,8 +217,8 @@
             players. Hosting the Minecraft server on Oracle Cloud provided a valuable learning experience, as it
             showcased the platform's flexibility and scalability.
           </p>
-          <img src="/images/cloud1.png" alt="Cloud img 1">
-          <img src="/images/cloud2.png" alt="Cloud img 2">
+          <img src="/images/cloud1.png" alt="Cloud img 1" loading="lazy">
+          <img src="/images/cloud2.png" alt="Cloud img 2" loading="lazy">
         </div>
 
       </section>
@@ -268,42 +268,42 @@
         <div class="social-media-cards">
           <div class="mcard">
             <a href="https://twitter.com/_N0rule_">
-              <img src="https://cdn-icons-png.flaticon.com/512/733/733579.png" alt="Twitter logo">
+              <img src="https://cdn-icons-png.flaticon.com/512/733/733579.png" alt="Twitter logo" loading="lazy">
               <h3>Twitter</h3>
               @_n0rule_
             </a>
           </div>
           <div class="mcard">
             <a href="https://discord.com/invite/KDCa8dczVW">
-              <img src="https://cdn-icons-png.flaticon.com/512/5968/5968756.png" alt="Discord logo">
+              <img src="https://cdn-icons-png.flaticon.com/512/5968/5968756.png" alt="Discord logo" loading="lazy">
               <h3>Discord</h3>
               n0rule#0319
             </a>
           </div>
           <div class="mcard">
             <a href="https://telegram.me/N0rule">
-              <img src="https://cdn-icons-png.flaticon.com/512/2111/2111646.png" alt="Telegram logo">
+              <img src="https://cdn-icons-png.flaticon.com/512/2111/2111646.png" alt="Telegram logo" loading="lazy">
               <h3>Telegram</h3>
               @N0rule
             </a>
           </div>
           <div class="mcard">
             <a href="https://www.instagram.com/n0rule_">
-              <img src="https://cdn-icons-png.flaticon.com/512/174/174855.png" alt="Instagram logo">
+              <img src="https://cdn-icons-png.flaticon.com/512/174/174855.png" alt="Instagram logo" loading="lazy">
               <h3>Instagram</h3>
               @n0rule_
             </a>
           </div>
           <div class="mcard">
             <a href="https://github.com/N0rule">
-              <img src="https://cdn-icons-png.flaticon.com/512/2111/2111432.png" alt="Github logo">
+              <img src="https://cdn-icons-png.flaticon.com/512/2111/2111432.png" alt="Github logo" loading="lazy">
               <h3>Github</h3>
               @N0rule
             </a>
           </div>
           <div class="mcard">
             <a href="https://steamcommunity.com/id/N0rule">
-              <img src="https://cdn-icons-png.flaticon.com/512/3670/3670382.png" alt="Steam logo">
+              <img src="https://cdn-icons-png.flaticon.com/512/3670/3670382.png" alt="Steam logo" loading="lazy">
               <h3>Steam</h3>
               @N0rule
             </a>
