Fixed Pading issues

--- a/index.html
+++ b/index.html
@@ -103,7 +103,9 @@
                 can effortlessly manage your server with commands like kick, ban, and mute. You can also play your
                 favorite songs and create custom playlists with the built-in music player. Additionally, Emi has an
                 economy system that lets you earn coins, and offers commands like Reaction, Covid, and Pokemon.</p>
-              <div class="download-button">
+              </div>
+              <div class="download-buttons">
+                <div class="download-button">
                 <a href="https://github.com/N0rule/emi-discord-bot">
                   <img src="https://cdn-icons-png.flaticon.com/512/2111/2111432.png" alt="Github logo" loading="lazy">
                   Github
@@ -127,6 +129,8 @@
                 integrating real-time physiological data into the virtual experience, users can enhance immersion,
                 deepen
                 interactions, and explore new possibilities for emotional engagement within the virtual environment.</p>
+              </div>
+              <div class="download-buttons">
               <div class="download-button">
                 <a href="https://github.com/N0rule/vrc-osc-tizenos-hrm">
                   <img src="https://cdn-icons-png.flaticon.com/512/2111/2111432.png" alt="Github logo" loading="lazy">
@@ -141,6 +145,8 @@
               <img id="projects_img" src="/images/NanachiApplet.png" alt="Logi g15 NanachiApplet" loading="lazy">
               <p>A simple applet for my Logitech g15 keyboard display, it displays the current date and time, and a
                 little character who can look around and blink.</p>
+              </div>
+              <div class="download-buttons">
               <div class="download-button">
                 <a href="https://github.com/N0rule/NanachiApplet">
                   <img src="https://cdn-icons-png.flaticon.com/512/2111/2111432.png" alt="Github logo" loading="lazy">
