--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>N0rule Weebpage🫠</title>
   <!-- Favicon -->
@@ -103,9 +104,9 @@
                 can effortlessly manage your server with commands like kick, ban, and mute. You can also play your
                 favorite songs and create custom playlists with the built-in music player. Additionally, Emi has an
                 economy system that lets you earn coins, and offers commands like Reaction, Covid, and Pokemon.</p>
-              </div>
-              <div class="download-buttons">
-                <div class="download-button">
+            </div>
+            <div class="download-buttons">
+              <div class="download-button">
                 <a href="https://github.com/N0rule/emi-discord-bot">
                   <img src="https://cdn-icons-png.flaticon.com/512/2111/2111432.png" alt="Github logo" loading="lazy">
                   Github
@@ -129,8 +130,8 @@
                 integrating real-time physiological data into the virtual experience, users can enhance immersion,
                 deepen
                 interactions, and explore new possibilities for emotional engagement within the virtual environment.</p>
-              </div>
-              <div class="download-buttons">
+            </div>
+            <div class="download-buttons">
               <div class="download-button">
                 <a href="https://github.com/N0rule/vrc-osc-tizenos-hrm">
                   <img src="https://cdn-icons-png.flaticon.com/512/2111/2111432.png" alt="Github logo" loading="lazy">
@@ -145,8 +146,8 @@
               <img id="projects_img" src="/images/NanachiApplet.png" alt="Logi g15 NanachiApplet" loading="lazy">
               <p>A simple applet for my Logitech g15 keyboard display, it displays the current date and time, and a
                 little character who can look around and blink.</p>
-              </div>
-              <div class="download-buttons">
+            </div>
+            <div class="download-buttons">
               <div class="download-button">
                 <a href="https://github.com/N0rule/NanachiApplet">
                   <img src="https://cdn-icons-png.flaticon.com/512/2111/2111432.png" alt="Github logo" loading="lazy">
@@ -187,7 +188,8 @@
           <img src="/images/render2.png" alt="3D Model 2" loading="lazy">
           <img src="/images/render3.png" alt="3D Model 3" loading="lazy">
           <div style="margin-top: 20px;">
-            <video src="/video/Baphy_animation.mp4" autoplay loop muted playsinline alt="3D Model Animation" loading="lazy">
+            <video src="/video/Baphy_animation.mp4" autoplay loop muted playsinline alt="3D Model Animation"
+              loading="lazy">
           </div>
           <!-- <canvas id="model-viewer"></canvas> В Процессе.. -->
         </div>
